CHANGELOG

2018-06-11: Make the difference between app version and database version more clear.
2018-04-12: Caught up to all German definitions (again).
2018-04-09: Enable database update by default.
2018-03-29: Add ability to update database independently of app.
2018-03-21: Fix errors, add links between related entries, add DSC and Duolingo people names.
2018-03-07: Fix a lot of typos. Update YouTube links.
2018-02-25: Vocab from comments by Maltz about {boQwI'}.
2018-02-08: DSC vocab up to S01E15.
2018-01-29: some German translations of DSC vocab.
2018-01-11: Misc. edits, paq'batlh page numbers
2017-12-18: Misc. edits, some German translations.
2017-11-27: Misc. edits.
2017-11-13: Fix bug with link target on last line. Added qepHom'a' 2017 vocab.
2017-11-05: If KWOTD fails to match entry in db, treat as search. Lock bottom nav buttons to bottom of screen.
2017-10-31: More unconfirmed DSC words. Remove FAB, adjust UI spacing.
2017-10-29: Exclude extra section from random button.
2017-10-25: Add DSC font. Fix locale issues. Improve Preferences activity.
2017-10-24: Turn off copy and paste in entry. Hide KWOTD menu, and automatically start KWOTD job.
2017-10-20: Determined that ForegroundColorSpan fix is not cause of crash on Pixel, etc.
2017-10-17: Added KWOTD functionality. Changes to font family for prefix charts. Fix colour span bug (again).
2017-10-12: Added even more lesson functionality.
2017-10-10: Fix for multi-user database issue (#385) on devices with API 19+.
2017-10-09: Added more lesson functionality.
2017-10-05: Added lesson activity (hidden under preferences).
2017-10-01: Handle swipe to move between search results; put verb before verb stem in results
2017-09-25: Add opening monologue of DSC, make misc. edits related to DSC
2017-09-24: Fix tablet layout bug, make database IDs sequential without gaps, misc lint fixes
2017-09-20: allow edit of mistyped input, selection of text, search in {pIqaD}
2017-09-18: move v2 to main version; bug fixes